Developing Network Capabilities

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,10 +28,12 @@ dist.jar=${dist.dir}/TKISO.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.Application.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\Libraries\\Application\\dist\\Application.jar
+file.reference.TKGN.jar=C:\\Users\\Jamie\\Documents\\NetBeansProjects\\GameEngine\\TKGN\\dist\\TKGN.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.Application.jar}
+    ${file.reference.Application.jar}:\
+    ${file.reference.TKGN.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
